@startuml
class Owner {
  - org: String
  - user : String
}

class Basil{
 - qr: String
 - extraInfo: String
}

class BasilLeg {
 - timestamp: long
 -gpsPosition: String

}


class App {
+ main (args: String)
- getOrgIndex(orgs: String[], scanner: Scanner): String
- getTransactionIndex(transactions: String[], scanner: Scanner): Integer
- ...
}

Owner <.. "1" Basil : -owner
Basil <.. "1" BasilLeg : -basil
